# Syntropy

./: .gitignore  README.md
artifacts/: README.md
docs/: rust_integration_blueprint.md
notebook/: syntropy_compressor.ipynb  syntropy_compressor.py
reference/: coder_reference.py
rust/: Cargo.toml
rust/src/: classical.rs  coder.rs  main.rs  mixer.rs  model.rs  pipeline.rs  quant.rs  tokenizer.rs
